--- a/HTML5/style.css
+++ b/HTML5/style.css
@@ -1,14 +1,36 @@
 body{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(56, 56, 56);
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-#title, .subtitle, .post_title {
+.photo {
+    border-radius: 50px;
+    margin-left: 5px;
+    margin-top: 5px;
+}
+
+.subtitle, .post_title {
     color: darkolivegreen;
+    text-transform: capitalize;
+    font-style: italic;
+}
+
+#title {
+    color: darkolivegreen;
+    font-size: 40px;
+    text-transform: capitalize;
+}
+
+a {
+    text-decoration: underline;
+    color: rgb(199, 0, 0);
 }
 
 .post_title {
     font-size: 16;
     font-style: italic;
+    margin: 0;
+    margin-bottom: 15px;
 }
 
 .post {
@@ -17,4 +39,25 @@ body{
     padding: 10px;
     border: 3px solid #000;
     margin: 10px;
+    border-radius: 5px;
+}
+
+.post_content {
+    margin: 0;
+    margin-bottom: 15px;
+}
+
+.post_image {
+    margin-bottom: 15px;
+}
+
+.contacts_list {
+    list-style-type: none;
+    padding-left: 20px;
+}
+
+.contacts_list li a{
+    color: rgb(212, 212, 212);
+    text-decoration: none;
+
 }
