--- a/HTML5/style.css
+++ b/HTML5/style.css
@@ -1,40 +1,45 @@
 body{
     background-color: rgb(56, 56, 56);
     font-family: Georgia, 'Times New Roman', Times, serif;
+    width: 900px;
+    margin: auto;
 }
 
 .photo {
     border-radius: 50px;
-    margin-left: 5px;
-    margin-top: 5px;
+    margin-left: 15px;
+    margin-top: 20px;
 }
 
 .subtitle, .post_title {
     color: darkolivegreen;
     text-transform: capitalize;
     font-style: italic;
+    padding-left: 20px;
 }
 
 #title {
     color: darkolivegreen;
     font-size: 40px;
     text-transform: capitalize;
+    padding-left: 20px;   
 }
 
 a {
     text-decoration: underline;
     color: rgb(199, 0, 0);
+    font-style: italic;
 }
 
 .post_title {
     font-size: 16;
     font-style: italic;
-    margin: 0;
+    margin: 15px;
     margin-bottom: 15px;
+    padding-left: 20px;
 }
 
 .post {
-
     background: rgb(172, 255, 237);
     padding: 10px;
     border: 3px solid #000;
@@ -43,21 +48,23 @@ a {
 }
 
 .post_content {
-    margin: 0;
-    margin-bottom: 15px;
+    margin: 5px;
+    text-align: left;
 }
 
 .post_image {
     margin-bottom: 15px;
+    width: 100%;
 }
 
 .contacts_list {
     list-style-type: none;
-    padding-left: 20px;
+    padding-right: 20px;
+    text-align: right;
+    li
 }
 
 .contacts_list li a{
     color: rgb(212, 212, 212);
     text-decoration: none;
-
 }
